cmake_minimum_required(VERSION 3.25)
set(CMAKE_GENERATOR "Ninja")
project(clox C)
add_executable(clox)
target_compile_features(clox PRIVATE c_std_11)
target_include_directories(clox PRIVATE include)
file(GLOB_RECURSE SOURCES src/*.c)
target_sources(clox PRIVATE ${SOURCES})
set(BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/build)
file(MAKE_DIRECTORY ${BUILDDIR})
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG_PRINT_CODE -DDEBUG_TRACE_EXECUTION")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG")

